fixed game toolbar alignment

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -388,6 +388,7 @@ img.hero {
 }
 
 .game_container {
+  top: 0px !important;
   width: 100%;
   height: auto;
   position: absolute;
